# archbird

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Gemfile  LICENSE  Makefile  README.md  _config.yml  archbird  archbird.json
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
bindings/: node.c  python.c  wasm.c
cmake/: ArchbirdConfig.cmake.in  archbird.pc.in
examples/: jsee.json  minimal.archbird.json  minimal.verify.json  native.json  native.verify.json  polygrad.json  quickstart.archbird.json  quickstart.verify.json  tinygrad-polygrad.verify.json  tinygrad.json  tranfi.json  wlearn-rf.json  wlearn-sym.json
js/: README.md  binding.gyp  package-lock.json  package.json
py/: MANIFEST.in  README.md  pyproject.toml  setup.py
py/archbird/: __init__.py  __main__.py  _native.py  _serve_worker.py  cli.py  errors.py  native.py  project_configuration.py  provider_cache.py  schema.py  serve.py
py/archbird/adapters/: __init__.py  coverage.py
py/archbird/adapters/okf/: __init__.py  parser.py  reader.py
py/archbird/providers/: __init__.py  python_ast.py  verification.py
py/archbird/providers/scip/: __init__.py  provider.py  reader.py  scip_pb2.py
py/archbird/schemas/: .archbird-manifest.json  archbird.schema.json  change-proposal.schema.json  evaluation-corpus.schema.json  evaluation-protocol.schema.json  evaluation-reservation-plan.schema.json  evaluation-reservation.schema.json  graph-view.schema.json  okf-output-bundle.schema.json  okf-query-input.schema.json  provider-facts.schema.json  visualization-response.schema.json  workspace.schema.json
py/scripts/: sync-csrc.py
py/tests/: test_frontend.py  test_profiles.py  test_repository.py  test_scip_provider.py
schema/: archbird.schema.json  attestation.schema.json  baseline.schema.json  change-contract.schema.json  change-proposal.schema.json  change-result.schema.json  coverage-observation-request.schema.json  evaluation-case.schema.json  evaluation-comparison.schema.json  evaluation-protocol.schema.json  evaluation-reservation-comparison.schema.json  evaluation-run.schema.json  file-facts.schema.json  map-freshness.schema.json  provider-merge-conflicts.schema.json  test-symbol-observations.schema.json  verification.schema.json  (+2 more)
test/: act_cli.c  hash_cli.c  (+108 more)
test/cmake_consumer/: CMakeLists.txt  main.c
(+463 files in other folders)
