[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "archbird"
version = "0.0.1"
description = "Map codebase architecture, check its rules, and verify coordinated changes"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "csrc/vendor/*/LICENSE"]
authors = [{name = "Anton Zemlyansky"}]
keywords = ["archbird", "static-analysis", "agents", "architecture", "repository"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: C",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
archbird = "archbird.cli:main"

[project.optional-dependencies]
scip = ["protobuf>=5.27,<7"]
okf = ["PyYAML>=6.0", "markdown-it-py>=3,<5"]

[project.urls]
Homepage = "https://github.com/zemlyansky/archbird"
Repository = "https://github.com/zemlyansky/archbird"
Issues = "https://github.com/zemlyansky/archbird/issues"

[tool.setuptools.packages.find]
include = ["archbird", "archbird.*"]
namespaces = true

[tool.setuptools.package-data]
archbird = [
  "app/*",
  "app/assets/*",
  "schemas/*.json",
  "schemas/.archbird-manifest.json"
]
